added feaqture to canvas and start with SSE feature

--- a/test.html
+++ b/test.html
@@ -8,8 +8,9 @@
     </style>
     <script type="text/javascript" src="jquery-1.7.2.js"></script>
     <script type="text/javascript" src="work_panel.js"></script>
+    <!--<script type="text/javascript" src="database.js"></script> -->
     <meta charset="UTF-8" />
-    <title>Canvas Drag and Drop Test</title>
+    <title>Canvas</title>
   </head>
   <body>
     <canvas id="work_panel" width="400" height="300">
